ch06/builder/builder-usage/tests/fails/build_enum.stderr
error: proc-macro derive panicked
 --> tests/fails/build_enum.rs:3:10
  |
3 | #[derive(Builder)]
  |          ^^^^^^^
  |
  = help: message: Only structs with named fields are supported
